kubernetes/yaml/network/http-route-events-center.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: nus-cloud-project
  name: http-route-events-center
spec:
  parentRefs:
    - name: gateway-events-center
  rules:
    - matches:
        - path:
            type: Exact
            value: /register
      backendRefs:
        - name: cluster-ip-service-register-0
          port: 25660
