kubernetes/yaml/network/http-route-routing-hash-generate.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: nus-cloud-project
  name: http-route-routing-hash-generate
spec:
  parentRefs:
    - name: gateway-events-center
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cluster-ip-service-routing-hash-generate
          port: 25558
