kubernetes/yaml/network/http-route-user.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: nus-cloud-project
  name: http-route-user
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: cluster-ip-service-user
      port: 25559
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /register
          headers:
            - type: Exact
              name: routingIndex
              value: "0"
      backendRefs:
        - name: cluster-ip-service-register-0
          port: 25561
    - matches:
        - path:
            type: PathPrefix
            value: /register
          headers:
            - type: Exact
              name: routingIndex
              value: "1"
      backendRefs:
        - name: cluster-ip-service-register-1
          port: 25561
    - matches:
        - path:
            type: PathPrefix
            value: /login
          headers:
            - type: Exact
              name: routingIndex
              value: "0"
      backendRefs:
        - name: cluster-ip-service-login-0
          port: 25560
    - matches:
        - path:
            type: PathPrefix
            value: /login
          headers:
            - type: Exact
              name: routingIndex
              value: "1"
      backendRefs:
        - name: cluster-ip-service-login-1
          port: 25560
    - matches:
        - path:
            type: PathPrefix
            value: /tokenVerification
          headers:
            - type: Exact
              name: routingIndex
              value: "0"
      backendRefs:
        - name: cluster-ip-service-token-verification-0
          port: 25562
    - matches:
        - path:
            type: PathPrefix
            value: /tokenVerification
          headers:
            - type: Exact
              name: routingIndex
              value: "1"
      backendRefs:
        - name: cluster-ip-service-token-verification-1
          port: 25562
